added photos and questions

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <section>
+  <header>
     <ul>
       <li class="sizeMe">Question:
         <span class="questionNumber">0</span>/10</li>
@@ -16,7 +16,7 @@
         <span class="score">0</span>
       </li>
     </ul>
-  </section>
+  </header>
   <section role="region">
     <section class="startQuiz box">
       <h1>How well do you know cooking conversions?</h1>
