Basic Start function working

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       <h1>How well do you know cooking conversions?</h1>
       <button type="button" class="startButton button">Start</button>
     </section>
-    <section class="questionBox box"></section>
+    <section class="questionBox box">
       <div class="hidden">
-        <form role="questions">
+        <!-- <form role="questions">
           <fieldset>
            <legend class="questionText">Question text...</legend>
             <label class="sizeMe" for="0">
@@ -41,8 +41,9 @@
               <span>4</span>
             </label><button type="submit" class="submitButton button"> Submit</button>
           </fieldset>
-        </form>
+        </form> -->
       </div>
+    </section>
     <section class="results box">
       <div class="hidden">
       <p>Correct: <span>1</span></p>
