added button functionality

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         </form> -->
       </div>
     </section>
-    <section class="results box">
-      <div class="hidden">
+    <section class="results box hidden">
+      <div>
       <p>Correct: <span>1</span></p>
       <p>Incorrect: <span>1</span></p>
       <button type="button" class="restartButton button">Retake Quiz?</button>
