updated question rendering

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <header>
     <ul>
       <li class="sizeMe">Question:
-        <span class="questionNumber">0</span>/10</li>
+        <span class="questionNumber"></span>/10</li>
       <li class="sizeMe">Score:
-        <span class="score">0</span>
+        <span class="score"></span>
       </li>
     </ul>
   </header>
@@ -24,24 +24,6 @@
     </section>
     <section class="questionBox box">
       <div class="hidden">
-        <!-- <form role="questions">
-          <fieldset>
-           <legend class="questionText">Question text...</legend>
-            <label class="sizeMe" for="0">
-             <input class="radio" type="radio" id="0" value="1" name="answer" required="">
-             <span>1</span>
-            </label><label class="sizeMe" for="1">
-              <input class="radio" type="radio" id="1" value="2" name="answer" required="">
-              <span>2</span>
-            </label><label class="sizeMe" for="2">
-              <input class="radio" type="radio" id="2" value="3" name="answer" required="">
-              <span>3</span>
-            </label><label class="sizeMe" for="3">
-              <input class="radio" type="radio" id="3" value="4" name="answer" required="">
-              <span>4</span>
-            </label><button type="submit" class="submitButton button"> Submit</button>
-          </fieldset>
-        </form> -->
       </div>
     </section>
     <section class="results box hidden">
