--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <ul>
+    <ul aria-live="polite">
       <li class="sizeMe">Question:
         <span class="questionNumber"></span>/5</li>
       <li class="sizeMe">Score:
@@ -17,23 +17,25 @@
       </li>
     </ul>
   </header>
-  <section role="region">
-    <section class="startQuiz box">
-      <h1>How well do you know cooking conversions?</h1>
-      <button type="button" class="startButton button">Start</button>
+  <main>
+    <section role="region">
+      <section class="startQuiz box">
+        <h1>How well do you know cooking conversions?</h1>
+        <button type="button" class="startButton button">Start</button>
+      </section>
+      <section class="questionBox box" aria-live="polite">
+        <div class="hidden">
+        </div>
+      </section>
+      <section class="results box hidden" aria-live="polite">
+        <div>
+        <!---<p>Correct: <span>1</span></p>
+        <p>Incorrect: <span>1</span></p>
+        <button type="button" class="restartButton button">Retake Quiz?</button>
+        </div>
+      </section> --->
     </section>
-    <section class="questionBox box">
-      <div class="hidden">
-      </div>
-    </section>
-    <section class="results box hidden">
-      <div>
-      <p>Correct: <span>1</span></p>
-      <p>Incorrect: <span>1</span></p>
-      <button type="button" class="restartButton button">Retake Quiz?</button>
-    </div>
-    </section>
-  </section>
+  </main>
 
   <script src="//code.jquery.com/jquery.min.js"></script>
   <script src="./source.js"></script>
