made the quiz loop and current question update correctly!

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
   <header>
-    <ul aria-live="polite">
-      <li class="sizeMe">Question:
+    <!---<ul aria-live="polite">
+      <li id="currentQuestion">Question:
         <span class="questionNumber"></span>/5</li>
-      <li class="sizeMe">Score:
+      <li id="currentScore">Score:
         <span class="score"></span>
       </li>
-    </ul>
+    </ul>--->
   </header>
   <main>
     <section role="region">
@@ -28,12 +28,6 @@
         </div>
       </section>
       <section class="results box hidden" aria-live="polite">
-        <div>
-        <!---<p>Correct: <span>1</span></p>
-        <p>Incorrect: <span>1</span></p>
-        <button type="button" class="restartButton button">Retake Quiz?</button>
-        </div>
-      </section> --->
     </section>
   </main>
 
