added media querries

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
   </header>
   <main>
-    <section role="region">
+    <section>
       <section class="startQuiz box">
         <h1>How well do you know cooking conversions?</h1>
         <button type="button" class="startButton button">Start</button>
